# IteratedFunctions

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/ifs/: Camera.hpp  Camera2D.hpp  Camera3D.hpp  Common.hpp  IFSApplication.hpp  IFSBackend.hpp  IFSController.hpp  IFSFrontend.hpp  Logger.hpp  ParticleBuffer.hpp  ParticleData.hpp  Shader.hpp  UICallback.hpp  VulkanContext.hpp  Window.hpp
include/ifs/backends/: CustomIFS.hpp  Sierpinski2D.hpp
include/ifs/frontends/: ParticleRenderer.hpp  SphereRenderer.hpp
logs/: logs.txt
playground/: CMakeLists.txt  ifs_modular_main.cpp  ifs_visualizer_main.cpp
shaders/: frag.slang  shader.vert.spv  vert.slang
shaders/ifs/: ifs_compute.slang  ifs_particle.frag.slang  ifs_particle.vert.slang
shaders/ifs_modular/: common.slang
shaders/ifs_modular/backends/: custom_ifs.slang  sierpinski_2d.slang
shaders/ifs_modular/frontends/particle/: particle.frag.slang  particle.vert.slang
shaders/ifs_modular/frontends/sphere/: sphere.frag.slang  sphere.vert.slang
src/: CMakeLists.txt  ComputeExample.cpp  RenderingExample.cpp
src/ifs/: Camera3D.cpp  IFSController.cpp  ParticleBuffer.cpp  Shader.cpp  VulkanContext.cpp  Window.cpp
src/ifs/backends/: CustomIFS.cpp  Sierpinski2D.cpp
src/ifs/frontends/: ParticleRenderer.cpp  SphereRenderer.cpp
test/: CMakeLists.txt
test/Shader/: ShaderLoadingTests.cpp  ShaderValidationTests.cpp
test/VulkanContext/: VulkanContextTests.cpp
